British Post War Tree
Still need to complete some stuff

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -2554,3 +2554,28 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   SPR_League_Habsburg_ds_ADJ:0 "Spanish"
   SPR_League_Habsburg_cn_ADJ:0 "Spanish"
   SPR_League_Habsburg_an_ADJ:0 "Spanish"
+
+  VIC_Oceania_ni:0 "Commonwealth of Oceania"
+  VIC_Oceania_ni_DEF:0 "The Commonwealth of Oceania"
+  VIC_Oceania_ds:0 "Commonwealth of Oceania"
+  VIC_Oceania_ds_DEF:0 "The Commonwealth of Oceania"
+  VIC_Oceania_rc:0 "Commonwealth of Oceania"
+  VIC_Oceania_rc_DEF:0 "The Commonwealth of Oceania"
+  VIC_Oceania_an:0 "Commonwealth of Oceaniav"
+  VIC_Oceania_an_DEF:0 "The Commonwealth of Oceania"
+  VIC_Oceania_cn:0 "Commonwealth of Oceania"
+  VIC_Oceania_cn_DEF:0 "The Commonwealth of Oceania"
+  VIC_Oceania_lb:0 "Commonwealth of Oceania"
+  VIC_Oceania_lb_DEF:0 "The Commonwealth of Oceania"
+  VIC_Oceania_ss:0 "Commonwealth of Oceania"
+  VIC_Oceania_ss_DEF:0 "The Commonwealth of Oceania"
+  VIC_Oceania_jc:0 "Commonwealth of Oceania"
+  VIC_Oceania_jc_DEF:0 "The Commonwealth of Oceania"
+  VIC_Oceania_ni_ADJ:0 "Australasian"
+  VIC_Oceania_rc_ADJ:0 "Australasian"
+  VIC_Oceania_lb_ADJ:0 "Australasian"
+  VIC_Oceania_ss_ADJ:0 "Australasian"
+  VIC_Oceania_jc_ADJ:0 "Australasian"
+  VIC_Oceania_ds_ADJ:0 "Australasian"
+  VIC_Oceania_cn_ADJ:0 "Australasian"
+  VIC_Oceania_an_ADJ:0 "Australasian"
