--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -82,6 +82,27 @@
   # FOCUSES
   ##########################
 
+  PB_ENG_Britain_Forever:0 "Britain Forever"
+  PB_ENG_Begin_Demobilization:0 "Begin Demobilization"
+  PB_ENG_Impose_Article_15:0 "Impose Article 15"
+  PB_ENG_Expand_The_League_Of_Nations:0 "Expand the League of Nations"
+  PB_ENG_Secure_Russian_Stability:0 "Secure Russian Stability"
+  PB_ENG_Continue_The_German_Friendship:0 "Continue the German Friendship"
+  PB_ENG_A_Federated_Australasia:0 "A Federated Oceania"
+  PB_ENG_A_Equal_America:0 "An Equal America"
+  PB_ENG_A_United_Borealia:0 "A United Borealia"
+  PB_ENG_A_Red_Sun_Over_Asia:0 "A Red Sun Over Asia"
+  PB_ENG_Test_The_A_Bomb:0 "Test The 'A' Bomb"
+  PB_ENG_Reaffirm_Our_Position_In_The_Pacific:0 "Reaffirm Our Position In The Pacific"
+  PB_ENG_Found_The_Imperial_Secret_Services:0 "Found The Imperial Secret Services"
+  PB_ENG_Found_The_Continental_Crisis:0 "The Continental Crisis"
+  PB_ENG_The_Oriental_Crisis:0 "The Oriental Crisis"
+  PB_ENG_Support_The_Russian_Mandates:0 "Support The Russian Mandates"
+  PB_ENG_Begin_The_London_Tribunal:0 "Begin The London Tribunal"
+  PB_ENG_Addressing_The_Naval_Budget:0 "Addressing The Naval Budget"
+  PB_ENG_Keynesian_Economics:0 "Keynesian Economics"
+  PB_ENG_The_Veteran_Act:0 "The Veterans Act"
+
   PB_ENG_King_Death:0 "The Death of the King"
   PB_ENG_King_Death_desc:0 "After suffering illness after illness, King George V slept peacefully at midnight, and with it, a new dawn shall arise. Eventually, King Edward VIII shall assume the throne, although the future of the empire remains uncertain, as our nation is facing a paradigm shift never before seen in the British Isles."
   PB_ENG_London_Stock_Crisis:0 "The London Stock Crisis"
@@ -758,6 +779,7 @@
 
   ENG_Master_World_tt:0 "The following ideas will be combined to form one §YMilitary Spirit§! with a few extra buffs:\n  -Masters of the Air\n  -Masters of the Land\n  -Masters of the Sea\n\n"
 
+  ENG_WW2_VICTOR:0 "Is the victor in the Second Great War"
 
   ##########################
   # DECISIONS
@@ -1711,6 +1733,30 @@
   britain.4024.t:0 "Establishing the British Indian Empire"
   britain.4024.d:0 ""
   britain.4024.a:0 "A new path for peace and stability"
+
+  britain_postwar.1.t:0 "The Atomic Bomb"
+  britain_postwar.1.d:0 "Joseph had tended to his cattle as he had done everyday, for the past five years. As uneventful as his day was he had seen an odd increase in British naval vessels just off the coast. Joseph didn't take much note of it and simply continued tending to his sheep.\n\nAt approx 13:00 P.M. the ground near Joseph violently shook and amidst the assumed earthquake Joseph worryingly shouted for his wife Martha. Then in a blink of an eye the sky turned red, and a pure white flash engulfed Joseph's vision. The seemingly holy encounter lasted only seconds, with white quickly turning to grey, and forming what seemed to be a mushroom far off in the distance, as large as the sun itself. Joseph and his now approaching wife both stopped and stared in horror.... both speechless of what their eyes were witnessing. For a while both had believed they had seen either the death of god or his return, both being equally true."
+  britain_postwar.1.a:0 "Now I am become death, the destroyer of worlds"
+
+  britain_postwar.2.t:0 "A United Oceania" # Doesn't need loc
+  britain_postwar.2.d:0 ""
+  britain_postwar.2.a:0 "We are stronger united"
+
+  britain_postwar.3.t:0 "The Commonwealth of Oceania" 
+  britain_postwar.3.d:0 "The halls of parliament house in Sydney today were in jubilation as both the Victorian and Aotearian governments jointly agreed today to federate under one Oceanic flag. Whilst the beaucratic specifics of this new nation are still being worked out already flags on every government building are being replaced. Today a new entity enters the British empire, one more united than ever before."
+  britain_postwar.3.a:0 "God save the King!"
+
+  britain_postwar.4.t:0 "The Richmond Compromise" # Doesn't need loc
+  britain_postwar.4.d:0 ""
+  britain_postwar.4.a:0 "I love liberty"
+
+  britain_postwar.5.t:0 "The Borealian Confederation" # Doesn't need loc
+  britain_postwar.5.d:0 ""
+  britain_postwar.5.a:0 "We are stronger united"
+
+  britain_postwar.6.t:0 "A United Borealia" 
+  britain_postwar.6.d:0 ""
+  britain_postwar.6.a:0 "God save the King!"
 
   ##########################
   # EVENTS
