--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -908,7 +908,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.37.c:0 "Just arrest the instigators."
 
   germany.38.t:0 "Autobahn Bridge in Bielefeld Collapses"
-  germany.38.d:0 "A father, mother and daughter were saved from the wreckage yesterday. The wreckage of the autobahn near Bielefeld is what caused their misery. Although at this point it is unknown how the incident was caused, the police are starting an investigation into the matter. This part of the road network is quite important, as it connects the Ruhr and the middle of Germany, so many people find it should be reconstructed within a week or so."
+  germany.38.d:0 "A father, mother and daughter were saved from the wreckage yesterday. Doctors say they will be ok, but do worry about the daughters mental health after the incident. The wreckage of the autobahn near Bielefeld is what caused their misery. Although at this point it is unknown how the incident was caused, the police are starting an investigation into the matter. This part of the road network is quite important, as it connects the Ruhr and the middle of Germany, so many people find it should be reconstructed within a week or so. The ministry of infrastructure is still stumped by how this managed to happen, as this part of the road network has recently been renovated because the old one was very flimsy and also caused incidents but not as bad as this one. Now the national government and the ministry are deciding what to do."
   germany.38.a:0 "Begin Reconstruction immediatly."
   germany.38.b:0 "We first have to analyze what caused the collapse."
   germany.38.c:0 "Bielefeld exists?."
