--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -571,6 +571,9 @@
   ##########################
   # IDEAS
   ##########################
+
+  ENG_League_Peacekeepers:0 "League Peacekeepers"
+
   PB_ENG_Land_of_Hope:0 "The Land of Hope and Glory"
   PB_ENG_Land_of_Hope_desc:0 "Britain's modern history, though fraught with conflict, has nonetheless maintained the tradition of parliamentary democracy. Starkly contrasted with Europe, which outside of the German sphere and Scandinavia is increasingly radicalized to the far left and right. Britain's stake in the world is to maintain the light of European democracy, contradicted though it might be by their global imperium.\n\n§YIt will take considerable effort for radicals to fully undermine Britain's historic democracy, but if they succeed, §!§Rthe soul of the Empire may be forever corrupted.§!"
   PB_ENG_Postwar_Pacifism:0 "Postwar Pacifism"
@@ -775,11 +778,10 @@
 
   ENG_BAF_Dissolution_tt:0 "§YThe British African Authority will be dissolved along the lines of the decisions we have made following the Liason Conference.§!"
 
-  ENG_cant_send_volunteers:0 "Rule: §RIs not allowed to send volunteers§!"
-
   ENG_Master_World_tt:0 "The following ideas will be combined to form one §YMilitary Spirit§! with a few extra buffs:\n  -Masters of the Air\n  -Masters of the Land\n  -Masters of the Sea\n\n"
 
   ENG_WW2_VICTOR:0 "Is the victor in the Second Great War"
+  ENG_INVITE_TO_LEAGUE:0 "Every nation that is not Jacobin or Neo-Imperialist will be invited to the League of Nations\n\n"
 
   ##########################
   # DECISIONS
@@ -1758,8 +1760,13 @@
   britain_postwar.6.d:0 ""
   britain_postwar.6.a:0 "God save the King!"
 
+  britain_postwar.7.t:0 "Invitation To The League Of Nations" 
+  britain_postwar.7.d:0 ""
+  britain_postwar.7.a:0 "Anything for world peace"
+  britain_postwar.7.b:0 "...and be a slave to Britain? No thank you"
+
   ##########################
-  # EVENTS
+  # Leader Desc
   ##########################
   ENG_Edward_VIII_Desc:0 "His Majesty, King-Emperor Edward VIII has arisen to the crown with the death of his father, King George V. He finds himself reigning over a troubled nation, and an even more troubled empire. Noted for his open distaste for the rising popularity of the Worker's Union party, many leftists now fear that Edward might abandon his political neutrality as King to interfere in politics. Amidst economic and political uncertainty, Edward's rise to power and lack of concern for constitutional processes has done little to ease the government's worries."
   ENG_King_George_Desc:0 "Born George Frederick Ernest Albert in 1865, His Royal Highness King George V, Emperor of India and the British Empire, is in many ways a man that lives within the shadow of his father. Succeeding Edward VII after his death in 1910, George inherited an empire utterly traumatized by the single most horrific conflict in human history. With Europe clutched tight in the grip of economic depression, only economic isolationism could prevent privation, and so George V oversaw the establishment of Britain's diplomatic and economic isolationism from Europe. George V is most known for the catastrophic failure of the Indian Campaign, which saw the warhawk conservative goverment attempt to bolster their popularity with a quick campaign into India, hoping to finally rectify a black stain on British imperial history. George V openly endorsed the campaign and, when British forces were forced to halt due to heavy losses, his credability and the credability of the conservatives was badly damaged. This would ultimately force the conservatives into a coalition government with the Whig party in the subsequent elections. Now, in 1933, George's health has begun to fail him. Frequently ill and delegating affairs to the rest of the Royal family, many fear that George's death is imminent."
