--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -700,6 +700,10 @@
   PBNews.178.d:0 "During a modest ceremony in the New Brunswick parliament, members of the various North American provinces of the British Empire signed the Treaty on Confederation this afternoon, unifying the divided region into a single confederate government, named Borealia. With the approval of London, seemingly to the power in the face of a more assertive America, the new confederation spans impressively across the entire continent, from the Atlantic to the Pacific. Centralising the resources of the Canadian great plains and coasts, Borealie enters the future with promise and potential."
   PBNews.178.a:0 "Britain's banner flies high over North America"
 
+  PBNews.179.t:0 "BRITAIN REINFORCES ASIA"
+  PBNews.179.d:0 "With recent tension between the British global power and an expansionist Japan increasing in the aftermath of the second Great War, Westminster has given the green light to increasing British presence in the far flung corner of the world that is the Pacific. With the Pacific Fleet now bolstering more guns and ships through a higher budget, relations between Tokyo and London have soured extensively. Japan has declared the military presence in its backyard an outrage and a clear provocation, though London has assured the Japanese that this increase in naval power in the region is simply \"temporarily\"."
+  PBNews.179.a:0 "Will the Pacific be the next powder keg?"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
