Peace deal fixes and Britain stuff

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -83,6 +83,7 @@
   ##########################
 
   PB_ENG_Britain_Forever:0 "Britain Forever"
+  PB_ENG_Britain_Forever_desc:0 "The British Empire, in all her glory, has come out of two world wars as the undisputed victor. Many are dead, missing, or forever scarred both mentally and physically. These brave men and women who served at the homefront or in the thick of the action will never be forgotten. It is thanks to them that the British Empire shall live triumphantly for another millenia, maybe more."
   PB_ENG_Begin_Demobilization:0 "Begin Demobilization"
   PB_ENG_Impose_Article_15:0 "Impose Article 15"
   PB_ENG_Expand_The_League_Of_Nations:0 "Expand the League of Nations"
@@ -792,6 +793,8 @@
 
   ENG_SUPPORT_RUSSIAN_MANDATES_tt:0 "The occupation zones of Moscow, Petrograd, and St. Petersburg will receive economic aid\n\n"
 
+  ENG_FIX_THE_SLUMP:0 "Has begun the process of fixing the economy"
+
   ##########################
   # DECISIONS
   ##########################
@@ -1372,9 +1375,8 @@
 
   britain.97.t:0 "The Formosan Problem"
   britain.97.d:0 "Our control of what the natives call Formosa is increasingly growing to be a problem. Most experts in our empire agree that for the sake of stability, we really should give them some kind of local government. Some leaders in our far eastern holdings have suggested incorporating Taiwan into their existing government. Alternatively we could keep directly ruling the land even if it not worthwhile."
-  britain.97.a:0 "Transfer Taiwan to the Far East Administration."
-  britain.97.b:0 "Reorganize Taiwan's administration."
-  britain.97.c:0 "Direct control from London."
+  britain.97.a:0 "Establish a Taiwanese Dominion"
+  britain.97.b:0 "Direct control from London"
 
   britain.98.t:0 "Hawaii In The Imperial Powers?"
   britain.98.d:0 "The British have proposed us a alliance between our two powers, the economic and military advantages from this would be immense but our goverrnment is unsure if we should abandon neutrality."
