--- a/localisation/english/unit_l_english.yml
+++ b/localisation/english/unit_l_english.yml
@@ -349,8 +349,24 @@
  mountaineers_desc:0 "Combat in mountain ranges exposes troops to many perils, but sometimes cannot be avoided. Providing our soldiers with specialized training for this environment, we can minimize these risks."
  penal_battalion:0 "Penal Battalion"
  penal_battalion_desc:0 "The ultimate meat for the meat grinder."
- combat_amalgamate:0 "Combat Amalgamate"
+ combat_amalgamate:0 "Combat Amalgamates"
  combat_amalgamate_desc:0 "Questionably ethical cavalry replacement"
+ hardsuits:0 "Hardsuits"
+ hardsuits_desc:0 "Heavily Armored Augmented Infantry"
+ razorgirls:0 "Razormaidens"
+ razorgirls_desc:0 "Augmented Recon and Close Combat"
+ panzerhounds:0 "Panzerhounds"
+ panzerhounds_desc:0 "The dogs of war, literally"
+ flamethrowers:0 "Flamethrower Teams"
+ flamethrowers_desc:0 "For when you want to set those people over there on fire, but you're just not close enough to get the job done."
+ shockjockeys:0 "Shockjockies"
+ shockjockeys_desc:0 "Shock Troopers, intended for anti-armor use"
+ gw_basic_automat:0 "Duopod Automats"
+ gw_basic_automat_desc:0 "Light Model Automatic Mech"
+ tripod_automat:0 "Tripod Automats"
+ tripod_automat_desc:0 "Medium Automatic Mech"
+ quadropod_automat:0 "Quadropod Automats"
+ quadropod_automat_desc:0 "Heavy Automatic Mech"
 
  recon:1 "Cavalry Recon Detachment"
  recon_desc:0 "Sending smaller groups to scout ahead before moving in the main force allows us to gather intelligence about where the enemy is and how many we are facing."
