General Bug fixes and what not

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -700,13 +700,17 @@
   PBNews.178.d:0 "During a modest ceremony in the New Brunswick parliament, members of the various North American provinces of the British Empire signed the Treaty on Confederation this afternoon, unifying the divided region into a single confederate government, named Borealia. With the approval of London, seemingly to the power in the face of a more assertive America, the new confederation spans impressively across the entire continent, from the Atlantic to the Pacific. Centralising the resources of the Canadian great plains and coasts, Borealie enters the future with promise and potential."
   PBNews.178.a:0 "Britain's banner flies high over North America"
 
-  PBNews.179.t:0 "BRITAIN REINFORCES THE PACIFIC"
+  PBNews.179.t:0 "BRITAIN BOLSTERS THE PACIFIC"
   PBNews.179.d:0 "With recent tension between the British global power and an expansionist Japan increasing in the aftermath of the second Great War, Westminster has given the green light to increasing British presence in the far flung corner of the world that is the Pacific. With the Pacific Fleet now bolstering more guns and ships through a higher budget, relations between Tokyo and London have soured extensively. Japan has declared the military presence in its backyard an outrage and a clear provocation, though London has assured the Japanese that this increase in naval power in the region is simply \"temporarily\"."
   PBNews.179.a:0 "Will the Pacific be the next powder keg?"
 
   PBNews.180.t:0 "RISING TENSIONS IN THE EAST"
   PBNews.180.d:0 "While British officials had hoped for a return to the pre-war status quo after the occupation of France and the collapse of Russia, it becomes clearer every day that this war has changed the world beyond the old status quo. The myth of European strength has shattered overnight, bearing consequences for geopolitics. Japan, previously an ally of convenience for the British Empire, has now seriously provoked London through its claims on the Pacific, which Tokyo declared to be \"Japan's backyard\". The British fleet now secretly prepares for a potential confrontation between a resurgent Japan and a reconstructing Britain."
   PBNews.180.a:0 "The enemy of my enemy still remains an enemy"
+
+  PBNews.181.t:0 "GERMANY RETURNS FROM EXILE"
+  PBNews.181.d:0 "Today Germany has officially proclaimed its return from exile amongst the ruins of Frankfurt. The city had been mostly leveled besides a few distinct buildings. The arduous task of rebuilding the nation has now begun however nations accross the League of nations have pitched in to support the nations reconstructions efforts, Britain and the United Commonwealth being the biggest economic supporters of them all. Despite the destruction the German populace remains hopeful that it will be able to return to the world stage with the prestige and riches it held before the nation's exile."
+  PBNews.181.a:0 "Liberation until death"
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
