Germany exile/post war tree fixes and additions

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -5,13 +5,13 @@
 
   ###GAME RULES
   RULE_OPTION_GER_ELIZABETH_PATH:0 "The Red Diachy"
-  RULE_OPTION_GER_ELIZABETH_PATH_desc:0 ""
+  RULE_OPTION_GER_ELIZABETH_PATH_desc:0 "Germany will begin its transition into a socialist paradise."
 
   RULE_OPTION_GER_LIBERAL_PATH:0 "The Liberal Leap Forward"
-  RULE_OPTION_GER_LIBERAL_PATH_desc:0 ""
+  RULE_OPTION_GER_LIBERAL_PATH_desc:0 "Germany will be the heartland of European liberlism."
 
   RULE_OPTION_GER_REVANCHIST_PATH:0 "A Revanchist Germany"
-  RULE_OPTION_GER_REVANCHIST_PATH_desc:0 ""
+  RULE_OPTION_GER_REVANCHIST_PATH_desc:0 "Germany will pursue a revanchist policy in Europe."
   ##########################
   # MINISTERS
   ##########################
@@ -1364,6 +1364,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   PB_GER_Exile_Decisions_desc:0 "\n\n\n\n\n\nWith our homeland occupied by Pacte forces we have had no choice but to flee to the last untouched bastion of our empire; Central Africa. From here we will re-build our strength and eventually return to the Fatherland, no matter the cost."
   PB_GER_Search_For_Weapons:0 "Search for Weapons"
   PB_GER_Reclaim_The_Fatherland:0 "Reclaim The Fatherland"
+  PB_GER_Expand_African_Industry:0 "Expand African Industry"
+  PB_GER_Support_The_GLF:0 "Support The GLF"
   
 
   ##########################
@@ -1638,6 +1640,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   GER_Expand_Influence_Europe:0 "£decision_icon_small Decisions will be §Yunlocked§! to expand our influence over Europe"
 
   GER_Expand_Influence_Balkans:0 "£decision_icon_small Decisions will be §Yunlocked§! to expand our influence over the Balkans"
+
+  German_Liberation_Front_Presence_plus_2_tt:0 "German Liberation Front Presence §G+2§!"
 
   ##########################
   # COSMETIC TAGS
