German peace deal work + state loc fix

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -683,7 +683,7 @@
  STATE_682:0 "Northern Ontario"
  STATE_683:0 "Northeastern Canada"
  STATE_684:0 "Caroline Islands"
- STATE_685:0 "Champagne"
+ STATE_685:0 "Champagne-Ardenne"
  STATE_686:0 "Puerto Rico"
  STATE_687:0 "British Guyana"
  STATE_688:0 "Chaco Boreal"
