Minor FRA event push

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -547,7 +547,7 @@
   French.71.a:0 "We'll report the German perspective to our government then..."
 
   French.72.t:0 "The Imperial Powers"
-  French.72.d:0 ""
+  French.72.d:0 "With France now threatening the stability of Europe forever and our nations mere existance under threat the question of whether we should join Britain in stopping the Franco-Russian alliance is no longer a question of if, but when. For the survival of Germany we must reach out to our old allies in London and begin a grand crusade against the Pacte Revanchiste."
   French.72.a:0 "Just like old times"
 
   French.73.t:0 "Dealing With Corsica"
@@ -762,11 +762,11 @@
   French_flavour.41.a:0 "A possible future endeavour"
 
   French_flavour.42.t:0 "The New King"
-  French_flavour.42.d:0 ""
-  French_flavour.42.a:0 "And A New France"
+  French_flavour.42.d:0 "Maurras had spent the past weeks enjoying only the most lavish of meals and accommodation. He had worked up not only quite the appetite but a hefty gut as a result of his rather abnormal eating practises. Whilst some of his country men met the bare requirements when it came to daily calorie intake Maurras faced no such issue. At every special occassion when a feast was gaurenteed to be held Maurras made sure to be the center piece of attention, positioning himself either next to or adjacent to king Jean, being sure to remind everyone that these meals were being held thanks to his cunning political success during the time of the triumvirate. Even when the mood died down and everyone was suffering from the tragedy that is having a full belly he still reminded everyone that he was the reason France was on its path to success."
+  French_flavour.42.a:0 "Food is such a delight"
 
   French_flavour.43.t:0 "The New Second Estate"
-  French_flavour.43.d:0 ""
+  French_flavour.43.d:0 "Much of the pre-Great war noblity fled or simply found new occupations amongst the hell that was post war France. Employment, especially well paying employment was near impossible to find, however when the unruly years of the mid to late 1920s came about many once noble born individuals found work in publishing agencies writing for various pro-monarchist or extremist organisations. While Maurras wasn't of noble birth he was fortunate enough to weave his way into working for one of these organisations, meeting many like minded people who shared the same love of the monarchy that he did. Fast forward to now where Maurras is seen as the saviour of France a so called founding of the second estate has occured with many once noble individuals and families returning to their respective places in French society. Rich and poor have seemingly one thing in common under Maurras's new France, both classes know that the old order is here to stay, indefinitely.  "
   French_flavour.43.a:0 "A new nobility arises"
 
   French_flavour.44.t:0 "The Sovereign's Benevolence"
