bugfix poosh no 3

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -763,7 +763,7 @@
   PRS_Relaxed_Recruitment_Policies:0 "Relaxed Recruitment Policies"
   PRS_Mechanised_Division_Experimentation:0 "Mechanised Division Experimentation"
   PRS_Spartan_Culture:0 "Spartan Culture"
-  PRS_Do_Or_Die_Corps:0 "Do Or Die Corps"
+  #PRS_Do_Or_Die_Corps:0 "Do Or Die Corps"
   PRS_Project_Goliath:0 "Project: §YGoliath§!"
   PRS_Logistical_Planning:0 "Logistical Planning"
   PRS_Prussian_Marines:0 "Prussian Marines"
