--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -337,7 +337,7 @@
   PB_RUS_Monarchism_Redefined_3_desc:0 ""
 
   PB_RUS_Landship_Production_Cuts:0 "Landship Production Cuts"
-  PB_RUS_Unrelenting_Offensives_Idea:0 "Unrelenting Offensives"
+  #PB_RUS_Unrelenting_Offensives_Idea:0 "Unrelenting Offensives"
   PB_RUS_Decentralize_High_Command_Idea:0 "Decentralize High Command Idea"
   PB_RUS_Envelope_and_Liquidate_Idea:0 "Envelope And Liquidate"
   PB_RUS_A_Guiding_Hand:0 "A Guiding Hand"
@@ -612,7 +612,7 @@
   PB_RUS_The_Imperial_Army:0 "The Imperial Army"
   PB_RUS_Armored_Warfare:0 "Armored Warfare"
   PB_RUS_The_New_Hussars:0 "The New Hussars"
-  PB_RUS_Unrelenting_Offensives:0 "Unrelenting Offensives"
+  #PB_RUS_Unrelenting_Offensives:0 "Unrelenting Offensives"
   PB_RUS_Decentralize_High_Command:0 "Decentralize High Command"
   PB_RUS_Invest_in_Landship_Production:0 "Invest In Landship Production"
   PB_RUS_Encourage_Out_Of_the_Box_Thinking:0 "Encourage Out Of the Box Thinking"
