Turkey revolt added plus fixes

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1212,6 +1212,7 @@
   PB_FRA_SP_Dominance_desc:0 "The SP government has taken upon itself to influence every aspect of daily life with neo-imperialist ideology. They have mainly done this with propaganda means but also a system of he/she tell, where any reports of out of line thinking being brutally cracked down on; with death sentences being handed out daily. "
   PB_FRA_Purge_Military:0 "Night of the Truncheon"
   PB_FRA_Purge_Military_desc:0 "Across France one can hear the pleas of mercy from those that either served or still serve the French armed forces. Only those that were neutral or supportive of the SP organisation have been spared but efforts are underway to test the true loyalty of those who declared their indifferent opinions in the inter-service rivarly."
+  PB_FRA_Rehabilitated_Military:0 "Rehabilitated Military"
   PB_FRA_Rehabilitated_Military_desc:0 "Individuals across the French military that were either pro-SP or neutral today are declaring their unwavering loyalty to the new regime. Those that have not or still wish to remain neutral have been liquidated and now the armed branch of the government is as tightly knit as the security branch. There is no one left to question our motives and France can now ascend once again under a new party banner."
   PB_FRA_Son_of_Doriot:0 "The Marshal's Favored Son"
   PB_FRA_Son_of_Doriot_desc:0 "With Doriot now dead and proclaimed a saint of the French state we can now look forward, we may step in the footsteps of giants but we still have a new French legacy to build. "
