--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -712,6 +712,10 @@
   PBNews.181.d:0 "Today Germany has officially proclaimed its return from exile amongst the ruins of Frankfurt. The city had been mostly leveled besides a few distinct buildings. The arduous task of rebuilding the nation has now begun however nations accross the League of nations have pitched in to support the nations reconstructions efforts, Britain and the United Commonwealth being the biggest economic supporters of them all. Despite the destruction the German populace remains hopeful that it will be able to return to the world stage with the prestige and riches it held before the nation's exile."
   PBNews.181.a:0 "Liberation until death"
 
+  PBNews.182.t:0 "TURKEY REVOLTS"
+  PBNews.182.d:0 "Today in the Turkish city of Osman the Ottoman sultanate Abdulmejid II announced that the Ottoman Empire, once de facto ruled by the Russians, was no longer under the grasp of Moscow. He also informed the world that the nation would swiftly join Britain in its conflict against Russia, officaly proclaiming the nations willingess to join the British-German alliance. Moscow has openly stated that it will restore its overlordship over the Anatolia region through military might. It seems that that the on going conflict in Europe may just have another frontline to deal with."
+  PBNews.182.a:0 "Loyalty is a mere illusion"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
