--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -72,6 +72,10 @@
   ENG_PB_Phil_Piratin_FAM:0 "Phil Piratin"
 
   ENG_PB_John_Simon_IAM:0 "John Simon"
+  ENG_PB_Samuel_Hoare_IAM:0 "Samuel Hoare"
+  ENG_PB_James_Ede_IAM:0 "James Chuter Ede"
+  ENG_PB_Alliott_Verdon_Roe_IAM:0 "Alliott Verdon Roe"
+  ENG_PB_BH_Hart_IAM:0 "B. H. Liddell Hart"
 
   ENG_PB_Bertrand_Russell_SIM:0 "Bertrand Russell"
   ENG_PB_Cosmo_Gordon_SIM:0 "Cosmo Gordon Lang"
@@ -756,7 +760,7 @@
   PB_ENG_Imperial_Debate_Completed_Imperialist_tooltip:0 "§YHas Chosen an Neo-Victorianist Imperial Policy§!"
   PB_ENG_Imperial_Debate_Completed_Anti_Imperialist_tooltip:0 "§YHas Chosen an Enlightened Imperialist Imperial Policy§!"
   PB_ENG_British_Revolution_tooltip:0 "§YThe Despotic Edwardian Regime as been overthrown§!"
-  ENG_Dont_fucking_do_this:0 "§rGoing down this path may not be the best idea, and may have drastic unforseen consequences§!"
+  ENG_Dont_fucking_do_this:0 "§YWUP- Radicals§! becomes the ruling party.\n\nImperial Britain will be known as the §YUnited Republic§!\n\nChange Government Type to §YParliamentary Republic§! which grants Stability §G+5%§!.\n\nThis will §RBan§! the §GNeo Imperialist§! Party.\n\nThis will §RBan§! the §gDespotist§! Party.\n\nThis will §RBan§! the §LReactionary§! Party."
   PB_ENG_britain_reform_tooltip:0 "§YThe process to reform the armed forces will now be finally kicked into action§!"
 
   PB_ENG_Nicaragua_Canal_Completion_Tooltip:0 "The Nicaraguan Canal is §Ycompleted§!"
@@ -885,29 +889,29 @@
 
   PB_ENG_Parliament_Vote_tt:0 "§YParliament will vote on this issue, and if we have enough support we will gain the benefits of this decision§!"
 
-  ENG_Haig_Tories_Support_Government:0 "The £ENG_Haig_Tories  §BHaig Tories§! §Gsupport§! us"
-  ENG_Haig_Tories_Neutral_Government:0 "The £ENG_Haig_Tories  §BHaig Tories§! are §Yneutral§! toward us"
-  ENG_Haig_Tories_Not_Support_Government:0 "The £ENG_Haig_Tories  §BHaig Tories§! do not §Rsupport§! us"
+  ENG_Haig_Tories_Support_Government:0 "The £ENG_Haig_Tories  §BHaig Tories§! §Gsupport§! us | §G[?ENG.ENG_HaigTory_Support]%§!"
+  ENG_Haig_Tories_Neutral_Government:0 "The £ENG_Haig_Tories  §BHaig Tories§! are §Yneutral§! toward us | §Y[?ENG.ENG_HaigTory_Support]%§!"
+  ENG_Haig_Tories_Not_Support_Government:0 "The £ENG_Haig_Tories  §BHaig Tories§! do not §Rsupport§! us | §R[?ENG.ENG_HaigTory_Support]%§!"
 
-  ENG_ProgCon_Support_Government:0 "The £ENG_Conservatives  §bProgressive Tories§! §Gsupport§! us"
-  ENG_ProgCon_Neutral_Government:0 "The £ENG_Conservatives  §bProgressive Tories§! are §Yneutral§! toward us"
-  ENG_ProgCon_Not_Support_Government:0 "The £ENG_Conservatives  §bProgressive Tories§! do not §Rsupport§! us"
+  ENG_ProgCon_Support_Government:0 "The £ENG_Conservatives  §bProgressive Tories§! §Gsupport§! us | §G[?ENG.ENG_ProgCon_Support]%§!"
+  ENG_ProgCon_Neutral_Government:0 "The £ENG_Conservatives  §bProgressive Tories§! are §Yneutral§! toward us | §Y[?ENG.ENG_ProgCon_Support]%§!"
+  ENG_ProgCon_Not_Support_Government:0 "The £ENG_Conservatives  §bProgressive Tories§! do not §Rsupport§! us | §R[?ENG.ENG_ProgCon_Support]%§!"
 
-  ENG_Libs_Support_Government:0 "The £ENG_Whigs  §YWhigs§! §Gsupport§! us"
-  ENG_Libs_Support_Government:0 "The £ENG_Whigs  §YWhigs§! are §Yneutral§! toward us"
-  ENG_Libs_Not_Support_Government:0 "The £ENG_Whigs  §YWhigs§! do not §Rsupport§! us"
+  ENG_Libs_Support_Government:0 "The £ENG_Whigs  §YWhigs§! §Gsupport§! us | §G[?ENG.ENG_Liberal_Support]%§!"
+  ENG_Libs_Neutral_Government:0 "The £ENG_Whigs  §YWhigs§! are §Yneutral§! toward us | §Y[?ENG.ENG_Liberal_Support]%§!"
+  ENG_Libs_Not_Support_Government:0 "The £ENG_Whigs  §YWhigs§! do not §Rsupport§! us | §R[?ENG.ENG_Liberal_Support]%§!"
 
-  ENG_ModWUP_Support_Government:0 "The £ENG_WUP  §rWorker's Union Moderates§! §Gsupport§! us"
-  ENG_ModWUP_Neutral_Government:0 "The £ENG_WUP  §rWorker's Union Moderates§! are §Yneutral§! toward us"
-  ENG_ModWUP_Not_Support_Government:0 "The £ENG_WUP  §rWorker's Union Moderates§! do not §Rsupport§! us"
+  ENG_ModWUP_Support_Government:0 "The £ENG_WUP  §rWorker's Union Moderates§! §Gsupport§! us | §G[?ENG.ENG_ModWUP_Support]%§!"
+  ENG_ModWUP_Neutral_Government:0 "The £ENG_WUP  §rWorker's Union Moderates§! are §Yneutral§! toward us | §Y[?ENG.ENG_ModWUP_Support]%§!"
+  ENG_ModWUP_Not_Support_Government:0 "The £ENG_WUP  §rWorker's Union Moderates§! do not §Rsupport§! us | §R[?ENG.ENG_ModWUP_Support]%§!"
 
-  ENG_HardWUP_Support_Government:0 "The  £ENG_Jacobins   §RWorker's Union Hardliners§! §Gsupport§! us"
-  ENG_HardWUP_Neutral_Government:0 "The  £ENG_Jacobins   §RWorker's Union Hardliners§! are §Yneutral§! toward us"
-  ENG_HardWUP_Not_Support_Government:0 "The £ENG_Jacobins  §RWorker's Union Hardliners§! do not §Rsupport§! us"
+  ENG_HardWUP_Support_Government:0 "The  £ENG_Jacobins   §RWorker's Union Hardliners§! §Gsupport§! us | §G[?ENG.ENG_HardWUP_Support]%§!"
+  ENG_HardWUP_Neutral_Government:0 "The  £ENG_Jacobins   §RWorker's Union Hardliners§! are §Yneutral§! toward us | §Y[?ENG.ENG_HardWUP_Support]%§!"
+  ENG_HardWUP_Not_Support_Government:0 "The £ENG_Jacobins  §RWorker's Union Hardliners§! do not §Rsupport§! us | §R[?ENG.ENG_HardWUP_Support]%§!"
 
-  ENG_NPP_Support_Government:0 "The £ENG_NPP  §PNational People's Party§! §Gsupport§! us"
-  ENG_NPP_Neutral_Government:0 "The £ENG_NPP  §PNational People's Party§! are §Yneutral§! toward us"
-  ENG_NPP_Not_Support_Government:0 "The £ENG_NPP   §PNational People's Party§! do not §Rsupport§! us"
+  ENG_NPP_Support_Government:0 "The £ENG_NPP  §PNational People's Party§! §Gsupport§! us | §G[?ENG.ENG_NPP_Support]%§!"
+  ENG_NPP_Neutral_Government:0 "The £ENG_NPP  §PNational People's Party§! are §Yneutral§! toward us | §Y[?ENG.ENG_NPP_Support]%§!"
+  ENG_NPP_Not_Support_Government:0 "The £ENG_NPP   §PNational People's Party§! do not §Rsupport§! us | §R[?ENG.ENG_NPP_Support]%§!"
 
   PB_ENG_Parliament_Completing_Decision:0 "The Government is §Rnot§! currently completing any other parliamentary decisions\n"
 
@@ -1055,7 +1059,7 @@
   britain.22.a:0 "Let's hope it doesn't come to that"
 
   britain.23.t:0 "The Military Storms Parliament"
-  britain.23.d:0 "JFC Fuller strode into Parliament alongside Arthur Harris in the Halls of Parliament. Fuller was a veteran of the Great War and the leading thinker in armoured warfare. Fuller lost faith in democracy when the National Recovery Act failed similiar to Air Marshall Harris. Together they walked behind the only man who could unite Britain- King Edward VIII.\n\nEarlier Fuller ordered his troops to storm Parliament and clear the way for the King to dissolve the waste of space called parliament. It was over in then less then five glorious minutes, the King disolved them using his Royal Prerogative and made them bow to him whilst he left, humilating the bastards on the way out.\n\nThe King afterwards spoke to his Troops and onlookers who gathered beforehand wishing to witness what was going on. The speech was short and effective and told the country how the King was fed up with the current Parliament and how he was fed up with them and would replace them with fresh elections once the crisis was over. The Crowd cheered and applauded for the King to Fuller's delight. For the first time since before the Great War, JFC Fuller finally had hope in the British political system before he cried God Save the King which was unanmiously joined in by all onlookers."
+  britain.23.d:0 "JFC Fuller strode into Parliament alongside Arthur Harris in the Halls of Parliament. Fuller was a veteran of the Great War and the leading thinker in armoured warfare. Fuller lost faith in democracy when the National Recovery Act failed similiar to Air Marshall Harris. Together they walked behind the only man who could unite Britain- King Edward VIII.\n\nEarlier Fuller ordered his troops to storm Parliament and clear the way for the King to dissolve the waste of space called parliament. It was over in then less then five glorious minutes, the King disolved them using his Royal Prerogative and made them bow to him whilst he left, humilating the bastards on the way out.\n\nThe King afterwards spoke to his Troops and onlookers who gathered beforehand wishing to witness what was going on. The speech was short and effective and told the country how the King was fed up with the current Parliament and would replace them with fresh elections once the crisis was over. The Crowd cheered and applauded for the King to Fuller's delight. For the first time since before the Great War, JFC Fuller finally had hope in the British political system before he cried God Save the King which was unanmiously joined in by all onlookers."
   britain.23.a:0 "So this is how Democracy dies..."
 
   britain.24.t:0 "Opening of the 1934 Imperial Conference"
@@ -1569,6 +1573,16 @@
   britain.1041.d:0 "Placeholder"
   britain.1041.a:0 "Let's get started, shall we?"
 
+  britain.1042.t:0 "The 1937 General Election"
+  britain.1042.d:0 ""
+  britain.1042.a:0 "The Tories"
+  britain.1042.b:0 "The Worker's Union Party"
+  britain.1042.c:0 "The National People's Party"
+
+  britain.1043.t:0 "The British Revolution"
+  britain.1043.d:0 "In a shocking announcement to parliament, Prime Minister Mosley submitted a proposal for the abolition of the British monarchy and the declaration of a Republic. The proposal, clearly penned by new party head Harry Pollitt, was met with near instantaneous backlash. Before Mosley could even finish speaking, parliament had erupted into chaos. WUP ministers exchanged blows with their fellows before Mosley, seemingly egged on by Pollitt, ordered for local troops to intervene. A small contingent of British Home Guard, loyal to the party, mobilized on the House of Commons and seized it after a short shootout.\n\nGiven the chance to finish, his words now backed by gun barrels, Mosley nervously announced that parliament would be disbanded and replaced by a new British Workman's Council. The Council would be the foundation of the new United British Republic of the Common Man, severing all ties to the monarchy and handing power to the people. Mosley's words, broadcast by telescreen across the nation, invoked panic instead of praise. Citizens began frantically organizing into militias for either side, with a few reported fatalities when said opposing groups met. Riots broke out at ration centers as the population tried to hoard as much as they could for the coming crisis.\n\nInstead of a civil war, however, Mosley and Pollitt's coup would end in a whimper.\n\nOnce made aware of the situation, British High Command mobilized and assaulted the House of Commons, quickly killing or arresting the Home Guard. In less than eight hours, the British Republic that the WUP proclaimed ended as Imperial hardsuits broke into parliament. Mosley, abandoned by Pollitt and his hardliner clique, was apprehended not long after, having reportedly soiled himself during the fighting.\n\nHigh Command has assumed provisonal control over Parliament for the time being, opting to suspend it until the Crisis is fully resolved. General JFC Fuller has been appointed the head of the provisional administration, vowing that democracy will be reinstated once every inch of the Union rot has been sponged, purged and if need be, blasted from British soil."
+  britain.1043.a:0 "And so ends the Red Menace"
+
   britain.2000.t:0 "Report from the Mandate"
   britain.2000.d:0 "A curious report has reached the office of Sir John French, Commissioner of the British Expeditionary Force in Palestine. The report, delivered by agents of the Imperial Security Service, contained a series of reports by Jordanian and Palestinian travelers that a white man traveling alone in the Jordanian desert has been spotted on multiple occasions. It went on to indicate a high probability that the man being referred to may be the missing British Colonel Thomas Edward Lawrence, though it cannot confirm this with absolute certainty.\n\nLawrence vanished from his posting in the Trucial States following the end of hostilities in the Great War. The reason for his disappearence is unknown, but colleagues attested to the ISS that his service during the North African campaign and the Arab Peacekeeping operations may have pushed him over the edge. Lawrence's fascination with the Middle East is well known, and ISS agents have been combing the Arab Kingdoms for almost two decades in an effort to locate him. If this lead is to be believed, Lawrence may have been hiding beneath our noses this entire time. Our ISS office in Jerusalem has advised that we dispatch an agent to Jordan to locate this unidentified man post haste, as we may lose our chance to find him with the brewing chaos in the Near East."
   britain.2000.a:0 "Dispatch an Agent to locate him."
@@ -1746,7 +1760,12 @@
 
   britain.4024.t:0 "Establishing the British Indian Empire"
   britain.4024.d:0 ""
-  britain.4024.a:0 "A new path for peace and stability"
+  britain.4024.a:0 "Maintain a conventional colonial administration"
+  britain.4024.b:0 "Establish a federation state between the colonies"
+
+  britain.4025.t:0 "Forming the Indian Commonwealth"
+  britain.4025.d:0 ""
+  britain.4025.a:0 "Perhaps some autonomy will resolve our problems."
 
   britain_postwar.1.t:0 "The Atomic Bomb"
   britain_postwar.1.d:0 "Joseph had tended to his cattle as he had done everyday, for the past five years. As uneventful as his day was he had seen an odd increase in British naval vessels just off the coast. Joseph didn't take much note of it and simply continued tending to his sheep.\n\nAt approx 13:00 P.M. the ground near Joseph violently shook and amidst the assumed earthquake Joseph worryingly shouted for his wife Martha. Then in a blink of an eye the sky turned red, and a pure white flash engulfed Joseph's vision. The seemingly holy encounter lasted only seconds, with white quickly turning to grey, and forming what seemed to be a mushroom far off in the distance, as large as the sun itself. Joseph and his now approaching wife both stopped and stared in horror.... both speechless of what their eyes were witnessing. For a while both had believed they had seen either the death of god or his return, both being equally true."
