Additional UK fixes

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -44,6 +44,7 @@
   ENG_PB_Edward_VIII_HOG:0 "Edward VIII"
   ENG_PB_Archibald_Ramsay_HOG:0 "Archibald Ramsay"
   ENG_PB_Bill_Alexander_HOG:0 "Bill Alexander"
+  ENG_PB_Arthur_Harris_HOG:0 "Arthur Harris"
 
   ENG_PB_Robert_Forgan_ECM:0 "Robert Forgan"
   ENG_PB_William_Edward_David_Allen_ECM:0 "William Edward David Allen"
