--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -652,6 +652,9 @@
  VICTORY_POINTS_322:0 "Norwich"
  VICTORY_POINTS_407:0 "Swansea"
  VICTORY_POINTS_11279:0 "Leicester"
+ VICTORY_POINTS_9809:0 "Podgorica"
+ VICTORY_POINTS_9874:0 "Pristina"
+ VICTORY_POINTS_9906:0 "Niš"
  VICTORY_POINTS_6237:0 "Nottingham"
  VICTORY_POINTS_9075:0 "Inverness"
  VICTORY_POINTS_9303:0 "Galway"
