A lot of VPS and a lot of fixes

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -653,6 +653,14 @@
  VICTORY_POINTS_407:0 "Swansea"
  VICTORY_POINTS_11279:0 "Leicester"
  VICTORY_POINTS_9809:0 "Podgorica"
+ VICTORY_POINTS_11564:0 "Rijeka"
+ VICTORY_POINTS_6647:0 "Osijek"
+ VICTORY_POINTS_3617:0 "Novi Sad"
+ VICTORY_POINTS_11787:0 "Zrenjanin"
+ VICTORY_POINTS_6970:0 "Kragujevac"
+ VICTORY_POINTS_6983:0 "Banja Luka"
+ VICTORY_POINTS_3943:0 "Zadar"
+ VICTORY_POINTS_6889:0 "Dubrovnik"
  VICTORY_POINTS_9874:0 "Pristina"
  VICTORY_POINTS_9906:0 "Niš"
  VICTORY_POINTS_6237:0 "Nottingham"
