--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -189,7 +189,7 @@
 
  tech_automat_medium_2:0 "Tripod II"
  tech_automat_medium_2_upgrade_1:0 "Dominance Horn"
- tech_automat_medium_2_upgrade_1_desc:0 ""
+ tech_automat_medium_2_upgrade_1_desc:0 "Blasting the airhorn on the Tripod is important to assert dominance.\n\n"
  tech_automat_medium_2_upgrade_2:0 "Heat-Ray Prismatic Accelerators"
  tech_automat_medium_2_upgrade_2_desc:0 ""
 
